--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@
   --color-light: #fff;
   --text-button: #ffffff;
   --color-button-trans: #fff;
-  --vd-color-pink: #e9088a;
+  --vd-color-pink: #465032;
   --border-radius: 12px;
 }
 
