--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@
   font-display: swap;
 }
 :root {
-  --color-main: #caad97e2;
+  --color-main: #d1c8c0;
   --color-primary: #657151d1;
   --color-secondary: #465032;
   --color-dark: #1e1f1e;
