--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,7 +26,9 @@
 }
 
 body {
-  font-family: "Baskerville Italic";
+  font-family: 'Libre Baskerville', serif;
+  font-style: normal;
+  font-weight: 400;
   color: var(--color-dark);
   -webkit-hyphens: manual;
           hyphens: manual;
@@ -2250,7 +2252,9 @@ img[alt=tree] {
 .story-section h6 {
   margin-top: 0.5rem;
   font-weight: 600;
-  font-family: 'Baskerville Italic', sans-serif;
+  font-family: 'Libre Baskerville', serif;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .story-text p {
